--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="col-6">
-            <form action="Desktop.html">
+            <form action="desktop.html">
                 <input name="Desktop" type="number" class="form-control" placeholder="Desktop" autofocus required>
 
                 <br>
